--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vite serve",
+    "build": "vite build"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -16,10 +16,10 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "node-sass": "^4.14.1",
+    "@vue/cli-plugin-babel": "~5.0.7",
+    "@vue/cli-plugin-router": "~5.0.7",
+    "@vue/cli-service": "~5.0.7",
+    "sass": "^1.80.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
